--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -40,3 +40,24 @@ jobs:
           black: true
           pylint: true
           flake8: true
+
+  tests:
+    runs-on: ubuntu-latest
+    needs: [editorconfig, linters]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      - name: Install requirements
+        working-directory: ./frontend-service
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+
+      - name: Unit Test
+        working-directory: ./frontend-service
+        run: python -m unittest test_frontend_service.py
