--- a/frontend-service/requirements.txt
+++ b/frontend-service/requirements.txt
@@ -8,3 +8,4 @@ markupsafe==2.1.3 ; python_version >= "3.10" and python_version < "4.0"
 werkzeug==3.0.0 ; python_version >= "3.10" and python_version < "4.0"
 requests ; python_version >= "3.10" and python_version < "4.0"
 Flask-SQLAlchemy==3.1.1 ; python_version >= "3.10" and python_version < "4.0"
+requests_mock ; python_version >= "3.10" and python_version < "4.0"
