--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -61,3 +61,24 @@ jobs:
       - name: Unit Test
         working-directory: ./frontend-service
         run: python -m unittest test_frontend_service.py
+
+  scan:
+    name: gitleaks
+    runs-on: ubuntu-latest
+    needs: [editorconfig, linters, tests]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  code-smells:
+    name: SonarCloud
+    needs: [editorconfig, linters, tests]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
