--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -41,7 +41,7 @@ jobs:
           pylint: true
           flake8: true
 
-  tests:
+  unit-tests:
     runs-on: ubuntu-latest
     needs: [editorconfig, linters]
     steps:
@@ -65,7 +65,7 @@ jobs:
   scan:
     name: gitleaks
     runs-on: ubuntu-latest
-    needs: [editorconfig, linters, tests]
+    needs: [editorconfig, linters, unit-tests]
     steps:
       - uses: actions/checkout@v3
       - uses: gitleaks/gitleaks-action@v2
@@ -74,7 +74,7 @@ jobs:
 
   code-smells:
     name: SonarCloud
-    needs: [editorconfig, linters, tests]
+    needs: [editorconfig, linters, unit-tests]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4 
@@ -82,3 +82,57 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+#  review-security-issues:
+#    name: Snyk
+#    runs-on: ubuntu-latest
+#    needs: [unit-tests, code-smells, scan]
+#    steps:
+#      - uses: actions/checkout@v4
+#      - uses: snyk/actions/python-3.10@master
+#        env:
+#          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+#        with:
+#          args: --severity-threshold=critical
+
+  build-and-push:
+    runs-on: ubuntu-latest
+    needs: [editorconfig, linters, unit-tests, scan, code-smells]
+
+    steps:
+      - name: Checkout the code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and export to Docker
+        uses: docker/build-push-action@v5
+        id: build
+        with:
+          context: .
+          file: ./frontend-service/Dockerfile
+          load: true
+
+      - name: Scan image with trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{ steps.build.outputs.imageid }}
+          format: "table"
+          exit-code: "1"
+          ignore-unfixed: true
+          vuln-type: "os,library"
+          severity: "CRITICAL"
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASS }}
+
+      - name: Push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: georgiyovchev/frontend-service:${{ github.sha }}
+          platforms: linux/amd64, linux/arm64
