--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -95,7 +95,7 @@ jobs:
 #        with:
 #          args: --severity-threshold=critical
 
-  build-and-push:
+  build-scan-push:
     runs-on: ubuntu-latest
     needs: [editorconfig, linters, unit-tests, scan, code-smells]
 
@@ -110,7 +110,7 @@ jobs:
         uses: docker/build-push-action@v5
         id: build
         with:
-          context: .
+          context: ./frontend-service
           file: ./frontend-service/Dockerfile
           load: true
 
