--- a/frontend-service/Dockerfile
+++ b/frontend-service/Dockerfile
@@ -5,16 +5,17 @@ RUN apt-get update \
            python3 \
            python3-pip \
         && mkdir -p /app \
+        && mkdir -p /app/templates \
         && useradd -d /app -s /bin/bash gosho \
         && chown -R gosho:gosho /app
 
 FROM base
 
-COPY requirements.txt /app/requirements.txt
+COPY ./requirements.txt /app/requirements.txt
 RUN pip3 install -r /app/requirements.txt
 
 COPY ./frontend.py /app
-COPY ./templates /app/templates
+COPY ./templates/index.html /app/templates
 
 WORKDIR /app
 
