--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -1,9 +1,9 @@
-name: CI Pipeline Frontend Service
+name: CI Pipeline Frontend-Service
 
 on:
   push:
     paths:
-      - './frontend-service/**' 
+      - './app/frontend-service/**' 
 
 jobs:
   editorconfig:
@@ -39,10 +39,6 @@ jobs:
         with:
           black: true
 
-      - name: Format the code with Black
-        run:
-          black ./frontend-service/*.py
-
   unit-tests:
     runs-on: ubuntu-latest
     needs: [editorconfig, linters]
@@ -54,18 +50,18 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install requirements
+      - name: Install Requirements
         working-directory: ./frontend-service
         run: |
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
 
       - name: Unit Test
-        working-directory: ./frontend-service
+        working-directory: ./app/frontend-service
         run: python -m unittest test_frontend_service.py
 
   scan:
-    name: gitleaks
+    name: GitLeaks
     runs-on: ubuntu-latest
     needs: [editorconfig, linters, unit-tests]
     steps:
