--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -122,6 +122,8 @@ jobs:
   building-infrastructure:
     runs-on: ubuntu-latest
     needs: [build-push-test]
+    outputs:
+      server_ip: ${{ steps.terraform_output.outputs.SERVER_IP }}
 
     steps:
       - uses: actions/checkout@v4
@@ -145,3 +147,23 @@ jobs:
           TF_VAR_hcloud_token: ${{ secrets.HCLOUD_TOKEN }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Terraform Output
+        id: terraform_output
+        run: echo "::set-output name=SERVER_IP::$(terraform output -raw server_ip)"
+  
+  configure-vm:
+    runs-on: ubuntu-latest
+    needs: [building-infrastructure]
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Run Ansible Playbook
+        run: 
