--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run checker
         run: editorconfig-checker      
 
-  linters:
+  linter:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -43,7 +43,7 @@ jobs:
 
   unit-tests:
     runs-on: ubuntu-latest
-    needs: [editorconfig, linters]
+    needs: [editorconfig, linter]
     steps:
       - uses: actions/checkout@v4
 
@@ -63,9 +63,9 @@ jobs:
         run: python -m unittest test_frontend_service.py
 
   scan:
-    name: GitLeaks
+    name: gitleaks
     runs-on: ubuntu-latest
-    needs: [editorconfig, linters, unit-tests]
+    needs: [editorconfig, linter, unit-tests]
     steps:
       - uses: actions/checkout@v3
         with:
@@ -76,8 +76,8 @@ jobs:
           ACTIONS_STEP_DEBUG: true
 
   code-smells:
-    name: SonarCloud
-    needs: [editorconfig, linters, unit-tests]
+    name: sonarcloud
+    needs: [editorconfig, linter, unit-tests]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4 
@@ -88,7 +88,7 @@ jobs:
 
   build-push-test:
     runs-on: ubuntu-latest
-    needs: [editorconfig, linters, unit-tests, scan, code-smells]
+    needs: [editorconfig, linter, unit-tests, scan, code-smells]
 
     steps:
       - name: Checkout the code
@@ -110,7 +110,7 @@ jobs:
           file: ./app/frontend-service/Dockerfile
           push: true
           tags: '${{ secrets.DOCKERHUB_USERNAME }}/frontend-service:${{ github.sha }}'
-          platforms: linux/amd64, linux/arm64
+          platforms: linux/amd64
 
       - name: Scan with trivy
         id: trivy
@@ -121,7 +121,6 @@ jobs:
 
   building-infrastructure:
     runs-on: ubuntu-latest
-#    needs: [build-push-test]
     outputs:
       server_ip: ${{ steps.terraform_output.outputs.SERVER_IP }}
 
@@ -195,3 +194,28 @@ jobs:
         env: 
           USERNAME: ${{ secrets.USERNAME }}
           PASSWORD: ${{ secrets.PASSWORD }}
+
+  deploy-app:
+    runs-on: ubuntu-latest
+    needs: [configure-vm, build-push-test]
+    steps: 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up SSH key
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+
+      - name: Add Host Key to Known hosts
+        run: |
+          ssh-keyscan -H ${{ needs.building-infrastructure.outputs.server_ip }} >> ~/.ssh/known_hosts
+        
+      - name: Test SSH Connection
+        run: ssh -o StrictHostKeyChecking=no root@${{ needs.building-infrastructure.outputs.server_ip }} "echo SSH connection successful"
+
+      - name: Deploy App to Kubernetes
+        run: ansible-playbook -i "${{ secrets.USERNAME }}@${{ needs.building-infrastructure.outputs.server_ip }}," --private-key ~/.ssh/id_rsa ./ansible/deploy-app.yml
+        env:
+          KUBECONFIG: /etc/rancher/k3s/k3s.yaml
