H1 in index.html edit to test the pipe.
H1 in index.html edit to test the pipe2.

Changed the inventory in ansible/deploy-app.yml

H1 in index.html edit to test the pipe3.

Added extra vars new_user.

H1 in index.html.

Changed manifest variable.

H1 in index.html2.

--- a/ansible/deploy-app.yml
+++ b/ansible/deploy-app.yml
@@ -1,5 +1,5 @@
 - name: Deploying the APP
-  hosts: k3s_cluster
+  hosts: all
   remote_user: "{{ new_user }}"
   become: yes
   
@@ -13,5 +13,5 @@
       kubernetes.core.k8s: 
         kubeconfig: "{{ kube_config_path }}"
         state: present
-        src: "{{ kube_manifest_local_path }}"
+        src: "{{ app_manifest_path }}"
 
