--- a/.github/workflows/frontend_ci.yml
+++ b/.github/workflows/frontend_ci.yml
@@ -197,7 +197,7 @@ jobs:
 
   deploy-app:
     runs-on: ubuntu-latest
-    needs: [configure-vm, build-push-test]
+    needs: [building-infrastructure, configure-vm, build-push-test]
     steps: 
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -216,5 +216,4 @@ jobs:
         run: ssh -o StrictHostKeyChecking=no root@${{ needs.building-infrastructure.outputs.server_ip }} "echo SSH connection successful"
 
       - name: Deploy App to Kubernetes
-        run: ansible-playbook -i "${{ secrets.USERNAME }}@${{ needs.building-infrastructure.outputs.server_ip }}," --private-key ~/.ssh/id_rsa ./ansible/deploy-app.yml -e "image_tag=${{ github.sha }}"
-        
+        run: ansible-playbook -i "${{ secrets.USERNAME }}@${{ needs.building-infrastructure.outputs.server_ip }}," --private-key ~/.ssh/id_rsa ./ansible/deploy-app.yml --extra-vars "image_tag=${{ github.sha }} new_user=${{ secrets.USERNAME }}"
