--- a/ansible/deploy-app.yml
+++ b/ansible/deploy-app.yml
@@ -29,12 +29,4 @@
 
     - name: Apply Kubernetes manifest
       ansible.builtin.shell:
-        cmd: "kubectl apply -f {{ local_manifest_path }}/{{ file_name }} --kubeconfig {{ kube_config_path }}"
-
-
-#    - name: Fetch Kubernetes manifest and update image
-#      ansible.builtin.shell:
-#        cmd: >
-#          curl -sL "{{ app_manifest_path }}" |
-#          sed "s|georgiyovchev/frontend-service:[^ ]*|georgiyovchev/frontend-service:{{ image_tag | quote }}|" > "{{ local_manifest_path }}/{{ file_name }}" &&
-#          kubectl apply -f "{{ local_manifest_path }}/{{ file_name }}" --kubeconfig "{{ kube_config_path }}"
+        cmd: "kubectl apply -f {{ local_manifest_path }}/{{ file_name }} --kubeconfig {{ kube_config_path }}/.ssh"
