Addig second pipeline for data service. Adding second playbook. Editing the manifest.
Changing the path to SQLite

Changing the number of replicas for frontend.

Path change in data pipeline.

Changing the name of data deploy playbook.

Changing path in playbook. Editing paths for trigger frontend pipeline.

Change in the sqlite path data.py.

Added path pipeline to the pipeline.

Removing typo from data playbook.

Added path pipeline to the pipeline.

added 2 replicas for best practice.

changed the port for frontend.

testing port frontend.

--- a/ansible/deploy-frontend.yml
+++ b/ansible/deploy-frontend.yml
@@ -29,4 +29,4 @@
 
     - name: Apply Kubernetes manifest
       ansible.builtin.shell:
-        cmd: "kubectl apply -f {{ local_manifest_path }}/{{ file_name }} --kubeconfig {{ kube_config_path }}/.ssh"
+        cmd: "kubectl apply -f {{ local_manifest_path }}/{{ file_name }} --kubeconfig {{ kube_config_path }}"
