--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -1,13 +1,13 @@
-name: Pipeline Frontend-Service
+name: Pipeline Data-Service
 
 on:
   push:
     paths:
-      - 'app/frontend-service/**' 
-      - 'app/frontend-service/**.py'
-      - 'app/frontend-service/templates/**.html'
-      - 'kubernetes/frontend-deploy.**'
-      - 'ansible/deploy-frontend.**'
+      - 'app/data-service/**'
+      - 'app/data-service/**.py'
+      - 'kubernetes/data-deploy.**'
+      - '.github/workflows/data_pipeline.**'
+      - 'ansible/deploy-data.**'
 
 jobs:
   editorconfig:
@@ -43,31 +43,31 @@ jobs:
         with:
           black: true
 
-  unit-tests:
-    runs-on: ubuntu-latest
-    needs: [editorconfig, linter]
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Install Requirements
-        working-directory: ./app/frontend-service
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
-
-      - name: Unit Test
-        working-directory: ./app/frontend-service
-        run: python -m unittest test_frontend_service.py
+#  unit-tests:
+#    runs-on: ubuntu-latest
+#    needs: [editorconfig, linter]
+#    steps:
+#      - uses: actions/checkout@v4
+#
+#      - name: Set up Python
+#        uses: actions/setup-python@v4
+#        with:
+#          python-version: 3.11
+#
+#      - name: Install Requirements
+#        working-directory: ./app/data-service
+#        run: |
+#          python -m pip install --upgrade pip
+#          python -m pip install -r requirements.txt
+#
+#      - name: Unit Test
+#        working-directory: ./app/data-service
+#        run: python -m unittest test_data_service.py
 
   scan:
     name: gitleaks
     runs-on: ubuntu-latest
-    needs: [editorconfig, linter, unit-tests]
+    needs: [editorconfig, linter,] #unit-tests
     steps:
       - uses: actions/checkout@v3
         with:
@@ -79,7 +79,7 @@ jobs:
 
   code-smells:
     name: sonarcloud
-    needs: [editorconfig, linter, unit-tests]
+    needs: [editorconfig, linter] #unit-tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4 
@@ -90,7 +90,7 @@ jobs:
 
   build-push-test:
     runs-on: ubuntu-latest
-    needs: [editorconfig, linter, unit-tests, scan, code-smells]
+    needs: [editorconfig, linter, scan, code-smells] #unit-tests
 
     steps:
       - name: Checkout the code
@@ -108,17 +108,17 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./app/frontend-service
-          file: ./app/frontend-service/Dockerfile
+          context: ./app/data-service
+          file: ./app/data-service/Dockerfile
           push: true
-          tags: '${{ secrets.DOCKERHUB_USERNAME }}/frontend-service:${{ github.sha }}'
+          tags: '${{ secrets.DOCKERHUB_USERNAME }}/data-service:${{ github.sha }}'
           platforms: linux/amd64
 
       - name: Scan with trivy
         id: trivy
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/frontend-service:${{ github.sha }}'
+          image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/data-service:${{ github.sha }}'
           severity: 'CRITICAL'
 
   building-infrastructure:
@@ -218,4 +218,4 @@ jobs:
         run: ssh -o StrictHostKeyChecking=no root@${{ needs.building-infrastructure.outputs.server_ip }} "echo SSH connection successful"
 
       - name: Deploy App to Kubernetes
-        run: ansible-playbook -i "${{ secrets.USERNAME }}@${{ needs.building-infrastructure.outputs.server_ip }}," --private-key ~/.ssh/id_rsa ./ansible/deploy-frontend.yml --extra-vars "image_tag=${{ github.sha }} new_user=${{ secrets.USERNAME }}"
+        run: ansible-playbook -i "${{ secrets.USERNAME }}@${{ needs.building-infrastructure.outputs.server_ip }}," --private-key ~/.ssh/id_rsa ./ansible/deploy-data.yml --extra-vars "image_tag=${{ github.sha }} new_user=${{ secrets.USERNAME }}"
