--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -7,6 +7,7 @@ on:
       - 'app/data-service/**.py'
       - 'kubernetes/data-deploy.**'
       - 'ansible/deploy-data.**'
+      - '.github/workflows/data_pipeline.**'
 
 jobs:
   editorconfig:
@@ -30,24 +31,22 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: 3.11
 
       - name: Install dependencies
         run: pip install black
 
-      - name: Run the linters
-        uses: wearerequired/lint-action@v2
-        with:
-          black: true
+      - name: Run linter for data.py
+        run: black --check app/data-service/data.py
 
   scan:
     name: gitleaks
     runs-on: ubuntu-latest
     needs: [editorconfig, linter,]
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: '0'
       - uses: gitleaks/gitleaks-action@v2
