--- a/ansible/deploy-data.yml
+++ b/ansible/deploy-data.yml
@@ -7,27 +7,33 @@
     kube_config_path: "/etc/rancher/k3s/k3s.yaml"
     app_manifest_path: "https://raw.githubusercontent.com/GeorgiYovchev/f-project-test/main/kubernetes/data-deploy.yaml"
     local_manifest_path: "/home/{{ new_user }}"
+    local_folder_name: "kubernetes"
     file_name: "data-deploy.yaml"
+    ops_folder_path: "{{ local_manifest_path }}/{{ local_folder_name }}"
+    image_data: "georgiyovchev/data-service"
 
   tasks:
+    - name: Check if ops folder exists
+      ansible.builtin.stat:
+        path: "{{ ops_folder_path }}"
+
     - name: Creates ops folder
       ansible.builtin.file:
-        path: "{{ local_manifest_path }}/kubernetes"
+        path: "{{ ops_folder_path }}"
         state: directory
 
     - name: Fetch Kubernetes manifest
       ansible.builtin.get_url:
         url: "{{ app_manifest_path }}"
-        dest: "{{ local_manifest_path }}/{{ file_name }}"
+        dest: "{{ ops_folder_path }}/{{ file_name }}"
         force: yes
 
     - name: Update image in Kubernetes manifest
       ansible.builtin.lineinfile:
-        path: "{{ local_manifest_path }}/{{ file_name }}"
-        regexp: 'image: georgiyovchev/data-service:[^ ]+'
-        line: '        image: georgiyovchev/data-service:{{ image_tag }}'
+        path: "{{ ops_folder_path }}/{{ file_name }}"
+        regexp: 'image: {{ image_data }}:[^ ]+'
+        line: '        image: {{ image_data }}:{{ image_tag }}'
 
     - name: Apply Kubernetes manifest
       ansible.builtin.shell:
-        cmd: "kubectl apply -f {{ local_manifest_path }}/{{ file_name }} --kubeconfig {{ kube_config_path }}"
-        
+        cmd: "kubectl apply -f {{ ops_folder_path }}/{{ file_name }} --kubeconfig {{ kube_config_path }}"
